Added additional questions in problems.csv Added TODOs into main.go Added Docker Support Added appveyor Improved Travis support Added VERSION for Makefile Added support for CodeCov.io for when testing is improved.
Signed-off-by: gnosthi <kenneth@yaay.us>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: go
 go:
   - "1.10"
+
+dist: trusty
+os:
+  - linux
+
+script:
+  - make travis
+  - make test
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -f coverage-all.out
