--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ dist: trusty
 os:
   - linux
 
+before_install:
+  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install git else brew install git || true; fi
+  - git config --global user.name nobody
+  - git config --global user.email nobody@nowhere.nosuchemail.com
+
 script:
   - make travis
   - make test
